if2/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check)
error[E0601]: `main` function not found in crate `format_check`
  --> src/main.rs:37:2
   |
37 | }
   |  ^ consider adding a `main` function to `src/main.rs`

error[E0308]: mismatched types
  --> src/main.rs:14:9
   |
10 | pub fn foo_if_fizz(fizzish: &str) -> &str {
   |                                      ---- expected `&str` because of return type
...
14 |         1
   |         ^ expected `&str`, found integer

Some errors have detailed explanations: E0308, E0601.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `format_check` (bin "format_check") due to 2 previous errors

[!] Source code format check: FAILED
